# payload_camera_ws

./: .dockerignore  .gitignore  .gitmodules  README.md  benchmark_stamp_split.py  fake_image_pub.py  fake_sync_inputs.py  micasense_spectrometer_bridge.py  requirements.txt  spectrometer_processor.py
.github/workflows/: test.yml
docker/: Dockerfile  TESTING.md  docker-compose.yml  entrypoint.sh  fastdds_shm.xml  run_tests.sh  test_integration.py
docker/stub_msgs/custom_msgs/: CMakeLists.txt  package.xml
docker/stub_msgs/inertial_sense_ros2/: CMakeLists.txt  package.xml
docker/tests/: test_camera_node_debug_log.py  test_db_schema.py  test_integration.py  test_save_queue.py  test_spectral_correct.py
docker/tests/fixtures/: test_clicks.csv  test_sensors.yaml
docs/: calibration.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
scripts/: rebag_image_streams.py  rebag_single_image_stream.py  vi_time_sync_CAM.py
src/MicaCRPCal/: package.xml  setup.cfg  setup.py
src/MicaCRPCal/mica_crp_cal/: auto_cal_node.py  panel_scan_node.py
src/MicaCRPCal/test/: test_auto_cal.py  test_panel_scan.py
src/andrea_multispec/: package.xml  setup.cfg  setup.py
src/andrea_multispec/andrea_multispec/: spectral_bridge.py
src/andrea_multispec/launch/: rgb_plus_as7265x.launch.py
src/as7265x_at/: README.md  package.xml  setup.cfg  setup.py
src/as7265x_at/as7265x_at/: as7265x_at_node.py  micasense_spectrometer_bridge..py  spectrometer_processor.py  sync_node.py
src/as7265x_at_msgs/: CMakeLists.txt
src/as7265x_at_msgs/msg/: AS7265xCal.msg  AS7265xRaw.msg
src/birdseye_calibrate/: README.md  package.xml  setup.cfg  setup.py
src/birdseye_calibrate/birdseye_calibrate/: birdseye_tf_publisher.py
src/camera_ros/: .gitignore
src/camera_ros/src/: CameraNode.cpp
src/camera_ros_bringup/: CMakeLists.txt  README.md  package.xml
src/camera_ros_bringup/launch/: camera_ros.launch.py
src/camera_ros_bringup/tmp/: rpi_pwm_control.py
src/fast_stamp_split/: CMakeLists.txt  package.xml
src/fast_stamp_split/src/: fast_stamp_split_node.cpp
src/frc_payload_launcher/: LICENSE  package.xml  setup.cfg  setup.py
src/frc_payload_launcher/launch/: fast_launch.py  sensors_launch.py  test_launch.py  vio_cal_launch.py
src/frc_payload_launcher/launch_files/: camera-trigger-config.service  fastdds-shm.service  install_netconfig.sh  install_services.sh  pwm.service  (+2 more)
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/multispec/: README.md
src/multispec_bringup/: package.xml  setup.cfg  setup.py
src/multispec_pairer/: package.xml  setup.cfg  setup.py
src/stamp_and_split_cam1/: README.md  package.xml  setup.cfg  setup.py
(+128 files in other folders)
