<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_ros_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andrea.arreort@gmail.com">pi4</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>camera_ros</exec_depend>
    <test_depend>stamp_and_split_cam1</test_depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
